# TheClick

./: .gitignore  README.md  build_mac.sh  build_msys.sh  build_ubuntu.sh  setup_qt_environment.sh
drumkit/Beep/: drumkit.xml
drumkit/Gimme A Hand 1.0/: drumkit.xml
drumkits/The Black Pearl 1.0 subset for TheClick/: drumkit.xml
src/: .gitignore
src/QtTheClick/: Icon_Windows.rc  ResourceEx.qrc  TheClick.pro  build.pri  common.pri
src/QtTheClick/rsc/: TheClick.icns  TheClick.qss
src/QtTheClick/src/MainWindow/: ClickControllerSoundWidget.cpp  ClickControllerSoundWidget.h  ClickGeneratorAbstractWidget.h  ClickGeneratorDivisionWidget.cpp  ClickGeneratorDivisionWidget.h  ClickGeneratorPASWidget.cpp  ClickGeneratorPASWidget.h  ClickGeneratorXoYWidget.cpp  ClickGeneratorXoYWidget.h  LabelEnhancedAbstractWidget.cpp  LabelEnhancedAbstractWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.pri  ScaleInformation.cpp  ScaleInformation.h  SoundElementWidget.cpp  SoundElementWidget.h  SpeedWidget.cpp  SpeedWidget.h  TheClickForm.ui
src/QtTheClick/src/MainWindow/ClickGeneratorTab/: ClickGeneratorAbstractWidget.h  ClickGeneratorDivisionWidget.cpp  ClickGeneratorDivisionWidget.h  ClickGeneratorPASWidget.cpp  ClickGeneratorPASWidget.h  ClickGeneratorSoundElementInterface.h  ClickGeneratorTab.pri  ClickGeneratorXoYWidget.cpp  ClickGeneratorXoYWidget.h
src/QtTheClick/src/MainWindow/SoundConfigurationTab/: ClickGeneratorSoundWidget.cpp  ClickGeneratorSoundWidget.h  SoundConfigurationTab.pri  SoundElementWidget.cpp  SoundElementWidget.h  XToXAssociationAbstractWidget.cpp  XToXAssociationAbstractWidget.h
src/QtTheClick/src/MainWindow/SoundElementTab/: ClickControllerSoundWidget.cpp  ClickControllerSoundWidget.h  ClickGeneratorSoundWidget.cpp  ClickGeneratorSoundWidget.h  LabelEnhancedAbstractWidget.cpp  SoundElementTab.pri  SoundElementWidget.cpp  SoundElementWidget.h  XToXAssociationAbstractWidget.cpp  XToXAssociationAbstractWidget.h
src/QtTheClick/src/widgets/OneToOneAssociationWidget/: OneToOneAssociationWidget.cpp  OneToOneAssociationWidget.h  OneToOneAssociationWidget.pri
src/QtTheClick/src/widgets/ScrollListOfWidgets/: ScrollListOfWidgets.cpp  ScrollListOfWidgets.h  ScrollListOfWidgets.pri  WidgetPlate.cpp  WidgetPlate.h
src/QtTheClick/src/widgets/XToXAssociationWidget/: XToXAssociationWidget.cpp  XToXAssociationWidget.h  XToXAssociationWidget.pri
src/QtTheClick/src/widgets/svgbutton/: qtsvgbutton.cpp  qtsvgbutton.h
src/QtTheClick/src/widgets/svgdial/: qtsvgdial.cpp  qtsvgdial.h  svgdial.pri
src/QtTheClick/src/widgets/svgdialwithbuttons/: qtsvgdialwithbuttons.cpp  qtsvgdialwithbuttons.h  svgdialwithbuttons.pri
src/QtTheClick/src/widgets/svgslider/: qtsvgslider.cpp  qtsvgslider.h  svgslider.pri
src/QtTheClick/src/widgets/svgtoggleswitch/: qtsvgtoggleswitch.cpp  qtsvgtoggleswitch.h
src/libTheClick/: CMakeLists.txt
src/libTheClick/include/libTheClick/: ClickConfiguration.h  ClickController.h  SoundBase.h  definitions.h  libTheClick.h  types.h
src/libTheClick/include/libTheClick/ClickGenerator/: ClickGeneratorElement.h  ClickGenerator_DivisionSubdivision.h  ClickGenerator_DummyBeatCount.h  ClickGenerator_Interface.h  ClickGenerator_Rudiments.h  ClickGenerator_XoverY.h
src/libTheClick/include/libTheClick/DrumKit/: DrumKit.h  Instrument.h  InstrumentLayer.h
src/libTheClick/include/libTheClick/Sound/: SoundElement.h  Sound_Interface.h  Sound_Mono.h  Sound_Stereo.h
src/libTheClick/include/libTheClick/helper/: CMakeLists.txt
src/libTheClick/include/libTheClick/helper/Xerces/: DOMTreeErrorHandler.h  StrX.h
src/libTheClick/src/libTheClick/: ClickConfiguration.cc  ClickController.cc  SoundBase.cc
src/libTheClick/src/libTheClick/ClickGenerator/: ClickGeneratorElement.cc  ClickGenerator_DivisionSubdivision.cc  ClickGenerator_DummyBeatCount.cc  ClickGenerator_Rudiments.cc  ClickGenerator_XoverY.cc
src/libTheClick/src/libTheClick/DrumKit/: DrumKit.cc  Instrument.cc  InstrumentLayer.cc
src/libTheClick/src/libTheClick/Sound/: SoundElement.cc  Sound_Interface.cc  Sound_Mono.cc  Sound_Stereo.cc
src/libTheClick/src/libTheClick/helper/Xerces/: DOMTreeErrorHandler.cc  StrX.cc
src/libraries/: .gitignore
src/testLibTheClick/: CMakeLists.txt  libTheClick  main.cpp
